dev/gateway/resources/reference-grants.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: ReferenceGrant
metadata:
  name: allow-gateway-to-main
  namespace: dev
spec:
  from:
    - group: gateway.networking.k8s.io
      kind: HTTPRoute
      namespace: dev
  to:
    - group: ""
      kind: Service
